# order-matching-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  RESULTS.md
.github/workflows/: ci.yml
analysis/: generate_plots.py  lob_sweep.py  lobster_loader.py  lobster_validate.py
benchmarks/: CMakeLists.txt  lob_bench.cpp  price_level_container_bench.cpp  spsc_ring_buffer_bench.cpp
benchmarks/support/: percentile.hpp
bindings/: CMakeLists.txt  bindings.cpp
include/lob/: level.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_command.hpp  order_pool.hpp  spsc_ring_buffer.hpp
include/lob/mm/: avellaneda_stoikov_maker.hpp  inventory_capped_maker.hpp  market_maker.hpp  metrics.hpp  naive_maker.hpp  ofi_maker.hpp  simulation_runner.hpp
include/lob/sim/: event.hpp  id_space.hpp  lobster_replay.hpp  market_data_log.hpp  replay_message.hpp  simulator.hpp  strategy.hpp  synthetic_generator.hpp  time_utils.hpp  virtual_clock.hpp
mm/: CMakeLists.txt  avellaneda_stoikov_maker.cpp  inventory_capped_maker.cpp  market_maker.cpp  metrics.cpp  naive_maker.cpp  ofi_maker.cpp  simulation_runner.cpp
scripts/: demo.sh
sim/: CMakeLists.txt  lobster_replay.cpp  market_data_log.cpp  simulator.cpp  synthetic_generator.cpp
src/: CMakeLists.txt  level.cpp  matching_engine.cpp  order_book.cpp  order_pool.cpp
tests/: CMakeLists.txt  determinism_test.cpp  matching_engine_test.cpp  order_book_test.cpp  order_pool_test.cpp  scaffold_test.cpp  spsc_ring_buffer_test.cpp
tests/fuzz/: fuzz_matching.cpp
tests/mm/: avellaneda_stoikov_maker_test.cpp  inventory_capped_maker_test.cpp  market_maker_test.cpp  metrics_test.cpp  naive_maker_test.cpp  ofi_maker_test.cpp  simulation_runner_test.cpp
tests/python/: test_lobster_loader.py  test_smoke.py
tests/python/fixtures/: lobster_sample_message.csv  lobster_sample_orderbook.csv
tests/sim/: event_ordering_test.cpp  golden_replay_test.cpp  lobster_replay_test.cpp  market_data_log_test.cpp  order_ack_test.cpp  queue_position_test.cpp  simulator_determinism_test.cpp  synthetic_generator_test.cpp  time_utils_test.cpp
tests/sim/support/: sim_test_helpers.hpp
tests/support/: test_helpers.hpp
